--- a/css/styles.css
+++ b/css/styles.css
@@ -18,3 +18,12 @@ header {
   font-family: 'Revalia', cursive;
   font-size: 28px;
 }
+
+#mask {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: rgba(0, 0, 0, 0.8);
+}
