--- a/css/styles.css
+++ b/css/styles.css
@@ -27,3 +27,27 @@ header {
   height: 100%;
   background: rgba(0, 0, 0, 0.8);
 }
+
+#instructions-container {
+  position: absolute;
+  top: 50%;
+  margin-top: -200px;
+  left: 50%;
+  margin-left: -250px;
+  width: 500px;
+  height: 400px;
+  background: white;
+  border-radius: 10px;
+  border: 5px solid #bada55;
+}
+
+.instructions {
+  margin: 20px;
+  padding: 10px;
+  background: yellow;
+  border: 1px solid black;
+}
+
+.red-text {
+  color: red;
+}
