--- a/css/styles.css
+++ b/css/styles.css
@@ -25,7 +25,11 @@ header {
   left: 0;
   width: 100%;
   height: 100%;
-  background: rgba(0, 0, 0, 0.8);
+  background: rgba(0, 0, 0, 0.9);
+}
+
+#images-container {
+  max-height: 500px;
 }
 
 #instructions-container {
@@ -50,4 +54,8 @@ header {
 
 .red-text {
   color: red;
+}
+
+img {
+  max-height: 100%;
 }
