--- a/css/styles.css
+++ b/css/styles.css
@@ -1,5 +1,5 @@
 body {
-  padding-top: 70px;
+  padding-top: 50px;
 }
 
 header, footer {
@@ -48,6 +48,7 @@ img {
 
 #mask {
   position: fixed;
+  z-index: 2;
   top: 0;
   left: 0;
   width: 100%;
@@ -61,6 +62,7 @@ img {
 
 #instructions-container {
   position: absolute;
+  z-index: 3;
   top: 50%;
   margin-top: -200px;
   left: 50%;
@@ -70,6 +72,13 @@ img {
   background: white;
   border-radius: 10px;
   border: 5px solid #bada55;
+}
+
+#main-vid {
+  position: absolute;
+  top: 50px;
+  right: 0;
+  z-index: 1;
 }
 
 .instructions {
