--- a/css/styles.css
+++ b/css/styles.css
@@ -1,34 +1,34 @@
 body {
-  padding-top: 50px;
+  min-width: 1280px;
+  min-height: 800px;
+  margin: 0;
 }
 
 header, footer {
   position: fixed;
+  z-index: 4;
   width: 100%;
   background: black;
   color: white;
-  left: 0;
-  z-index: 9999;
+  margin: 0;
 }
 
 header {
   padding-left: 50px;
   top: 0;
+  left: 0;
   height: 50px;
 }
 
 footer {
   bottom: 0;
+  left: 0;
   height: 30px;
   text-align: center;
 }
 
 footer a {
   color: #ccc;
-}
-
-img {
-  max-height: 100%;
 }
 
 #brand, #credits {
@@ -57,14 +57,21 @@ img {
 }
 
 #images-container {
+  /*position: fixed;*/
+  /*top: 50px;*/
+  /*left: 0;*/
   max-height: 500px;
 }
 
-#instructions-container {
+#images-container img {
+  max-height: 500px;
   position: absolute;
+}
+
+#instructions-container {
+  position: fixed;
   z-index: 3;
-  top: 50%;
-  margin-top: -200px;
+  top: 100px;
   left: 50%;
   margin-left: -250px;
   width: 500px;
@@ -81,6 +88,13 @@ img {
   z-index: 1;
 }
 
+#mini-vid {
+  position: fixed;
+  top: 0;
+  right: 0;
+  z-index: 1;
+}
+
 .instructions {
   margin: 20px;
   padding: 10px;
@@ -93,7 +107,7 @@ img {
 }
 
 .doge {
-  position: absolute;
+  position: fixed;
   z-index: 10;
   font-family: "Comic Sans MS", cursive, sans-serif;
 }
